src/objects/silverpop__Silverpop_Email_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Open__c</fullName>
        <formula>IF(
 ISBLANK(silverpop__Open_Date_Time__c),
 0,
 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <formula>IF(
 ISBLANK(silverpop__Sent_Date_Time__c),
 0,
 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Silverpop Email Activities</relationshipLabel>
        <relationshipName>Silverpop_Email_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>silverpop__Date_Bounced__c</fullName>
        <label>Date Bounced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>silverpop__Date_Unsubscribed__c</fullName>
        <label>Date Unsubscribed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>silverpop__Email_Name__c</fullName>
        <label>Email Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Engage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>silverpop__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Silverpop Email Activities</relationshipLabel>
        <relationshipName>Silverpop_Email_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>silverpop__Open_Date_Time__c</fullName>
        <label>Open Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>silverpop__Sent_Date_Time__c</fullName>
        <label>Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Silverpop_id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>silverpop__Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Silverpop Email Activity</label>
    <nameField>
        <label>Silverpop Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Silverpop Email Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>